Fix Images stretched out on `/teachers` & issue #973 -Footer not sticking to the bottom of the page of small pages  (#987)

--- a/app/assets/stylesheets/layout.scss
+++ b/app/assets/stylesheets/layout.scss
@@ -76,9 +76,10 @@
 }
 
 .favblank {
-  left: 40%;
-  position: absolute;
-  top: 35%;
+  align-items: center;
+  display: flex;
+  height: 300px;
+  justify-content: center;
 }
 
 .dropdown-item {
