--- a/app/assets/stylesheets/logixRelease.scss
+++ b/app/assets/stylesheets/logixRelease.scss
@@ -271,6 +271,10 @@ a.btn.btn-outline-danger {
   padding-top: 40px;
 }
 
+.align-center {
+  align-items: center;
+}
+
 .image_teachers{
   border: 1px solid $slight-gray;
   margin-left: 20px;
